--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@openzeppelin/contracts": "^4.0.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "@uniswap/v3-periphery": "^1.4.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "eslint": "^7.32.0",
@@ -27,7 +28,6 @@
   },
   "dependencies": {
     "@makerdao/currency": "^0.9.10",
-    "@uniswap/v3-core": "^1.0.1",
-    "@uniswap/v3-periphery": "^1.4.1"
+    "@uniswap/v3-core": "^1.0.1"
   }
 }
