--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
-    "solidity-coverage": "^0.7.21"
+    "solidity-coverage": "^0.7.21",
+    "jsbi": "^3.2.5"
   },
   "dependencies": {
     "@makerdao/currency": "^0.9.10",
